--- a/fun_coding/백준/바이러스1.ipynb
+++ b/fun_coding/백준/바이러스1.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -83,161 +83,313 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#array 순서뒤집어서 넣기\n",
+    "array1 = [[array[i][1], array[i][0]] for i in range(6)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys([1, 2, 5, 4])"
+       "[[2, 1], [3, 2], [5, 1], [2, 5], [6, 5], [7, 4]]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "array1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_array = {}\n",
+    "for i in range(1,computer+1):\n",
+    "    dict_array[i] = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [], 2: [], 3: [], 4: [], 5: [], 6: [], 7: []}"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([[1, 2], [2, 3], [1, 5], [5, 2], [5, 6], [4, 7]],\n",
+       " [[2, 1], [3, 2], [5, 1], [2, 5], [6, 5], [7, 4]])"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array, array1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if array[0][1] not in dict_array[array[0][0]]:\n",
+    "    dict_array[array[0][0]].add(array[0][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [2], 2: [], 3: [], 4: [], 5: [], 6: [], 7: []}"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_array = {}\n",
+    "for i in range(1,computer+1):\n",
+    "    dict_array[i] = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(6):\n",
+    "    dict_array[array[i][0]].append(array[i][1])\n",
+    "    dict_array[array1[i][0]].append(array1[i][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [2, 5], 2: [1, 3, 5], 3: [2], 4: [7], 5: [1, 2, 6], 6: [5], 7: [4]}"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_all_friends(g, start):\n",
+    "    qu = []\n",
+    "    done = set()\n",
+    "    \n",
+    "    qu.append(start)\n",
+    "    done.add(start)\n",
+    "    \n",
+    "    while qu:\n",
+    "        p = qu.pop(0)\n",
+    "        print(p)\n",
+    "        for x in g[p]:\n",
+    "            if x not in done:\n",
+    "                qu.append(x)\n",
+    "                done.add(x)\n",
+    "    print(len(done)-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "5\n",
+      "3\n",
+      "6\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_all_friends(dict_array, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "6\n",
+      "1 2\n",
+      "2 3\n",
+      "1 5\n",
+      "5 2\n",
+      "5 6\n",
+      "4 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "computer = int(input())\n",
+    "network = int(input())\n",
+    "array = [list(map(int, input().split())) for i in range(network)]\n",
+    "#array 순서뒤집어서 넣기\n",
+    "array1 = [[array[i][1], array[i][0]] for i in range(network)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_array = {}\n",
+    "for i in range(1,computer+1):\n",
+    "    dict_array[i] = []\n",
+    "for i in range(6):\n",
+    "    dict_array[array[i][0]].append(array[i][1])\n",
+    "    dict_array[array1[i][0]].append(array1[i][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "6\n",
+      "1 2\n",
+      "2 3\n",
+      "1 5\n",
+      "5 2\n",
+      "5 6\n",
+      "4 7\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "computer = int(input())\n",
+    "network = int(input())\n",
+    "array = [list(map(int, input().split())) for i in range(network)]\n",
+    "#array 순서뒤집어서 넣기\n",
+    "array1 = [[array[i][1], array[i][0]] for i in range(network)]\n",
     "\n",
-    "d = c.keys()"
+    "dict_array = {}\n",
+    "for i in range(1,computer+1):\n",
+    "    dict_array[i] = []\n",
+    "for i in range(6):\n",
+    "    dict_array[array[i][0]].append(array[i][1])\n",
+    "    dict_array[array1[i][0]].append(array1[i][1])\n",
+    "    \n",
+    "    \n",
+    "def print_all_friends(g, start):\n",
+    "    qu = []\n",
+    "    done = set()\n",
+    "    \n",
+    "    qu.append(start)\n",
+    "    done.add(start)\n",
+    "    \n",
+    "    while qu:\n",
+    "        p = qu.pop(0)\n",
+    "        for x in g[p]:\n",
+    "            if x not in done:\n",
+    "                qu.append(x)\n",
+    "                done.add(x)\n",
+    "    print(len(done)-1)\n",
+    "print_all_friends(dict_array, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
     }
    ],
    "source": [
-    "for i in range(len(network)):\n",
-    "    if i not in d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 2], [2, 3], [1, 5], [5, 2], [5, 6], [4, 7]]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for i in range(len(network)):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "student = {\"영희\":[]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "student[\"영희\"] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "student[\"영희\"] = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'영희': 1}"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "student"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "student[\"영희\"].append(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'영희': [2, 3]}"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "student"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1, 2], [2, 3], [1, 5], [5, 2], [5, 6], [4, 7]]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "array"
+    "print_all_friends(dict_array, 1)"
    ]
   },
   {
